# final-project-rsschool

./: .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: black.yml  mypy.yml  tests.yml
src/forest_ml/: __init__.py  classifier_switcher.py  data.py  model_selection.py  parameters.py  pipeline.py  predict.py  supp_functions.py  train.py
tests/: test_data_model.py  test_model_selection.py  test_train.py
tests/tem_dirs/: test_dataset.csv
tests/tem_dirs/.ipynb_checkpoints/: test_predict-checkpoint.csv
tests/tem_dirs/tmp8ipdpopj/: submit.csv
tests/tem_dirs/tmpkgcvl2ce/: model.joblib  test_df.csv
tests/tem_dirs/tmpxztb1ikj/: test_kaggle.csv
tests/tem_dirs/tmpyvx_y_ae/: test_kaggle.csv
