[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Forest Cover Type Prediction Model"
authors = ["OksanaZaitseva <o.zaitseva@softteco.com>"]

[tool.poetry.scripts]
train = "forest_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
