[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Forest Cover Type Prediction Model"
authors = ["OksanaZaitseva <o.zaitseva@softteco.com>"]

[tool.poetry.scripts]
train = "forest_ml.train:train"
model_selection = "forest_ml.model_selection:model_selection"
predict = "forest_ml.predict:predict"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
